kubernetes/payment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    run: payment
spec:
  selector:
    matchLabels:
      run: payment
  replicas: 1
  template:
    metadata:
      labels:
        run: payment
    spec:
      containers:
      - name: payment
        image: tinjis_pleo-payment:0.1
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 9000
        readinessProbe:
          httpGet:
            path: /health
            port: 9000
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 9000
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
