kubernetes/payment-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    run: payment
spec:
  type: ClusterIP
  ports:
  - port: 9000
    protocol: TCP
  selector:
    run: payment
